# awesome-reasoning

./: .gitignore  README.md
haskell/: CHANGELOG.md  haskell.cabal
haskell/app/: Main.hs
haskell/rules/: palindrome.json
haskell/src/: Machine.hs
haskell/src/Data/Map/: Extra.hs
src/neurallambda_data/: string_rewriting.py  string_rewriting_state.py
